# 29-2-shape-interface

./: CMakeLists.txt  README.md
include/: boundingboxdimensions.h  circle.h  functions.h  rectangle.h  shape.h  triangle.h
src/: CMakeLists.txt  boundingboxdimensions.cpp  circle.cpp  functions.cpp  main.cpp  rectangle.cpp  shape.cpp  triangle.cpp
