# CMakeList.txt : CMake project for 29-2-shape-interface, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("29-2-shape-interface")

# Add source to this project's executable.
add_subdirectory(src)

# TODO: Add tests and install targets if needed.
